--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.6
 # Pydantic for data validation
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # SQLAlchemy and database
 sqlalchemy==2.0.23
