--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ pymysql==1.1.0
 
 # Markdown rendering and sanitization
 markdown==3.5.1
+pymdown-extensions==10.5
 bleach==6.1.0
 
 # Authentication
