--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "5.0.1",
     "axios": "^1.6.2",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "remark-emoji": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
